<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiberius</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>
    <string name="title_activity_manual">Manual</string>
    <string name="title_activity_autonomy">Autonomy</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_wasd">WASD Control</string>
    <string name="title_activity_mission_selection">MissionSelection</string>
    <string name="title_activity_choose_destination">ChooseDestination</string>

    <!-- ********************************** TEXTVIEW NAMES *************************************** -->
    <!-- HEADERS -->
    <string name="autonomy_header">AUTONOMY</string>
    <string name="settings_header">SETTINGS</string>
    <string name="manual_header">Thumb Control</string>
    <string name="wasd_header">WASD Control</string>
    <string name="main_menu_header">MAIN MENU</string>
    <string name="database_header">DATABASE</string>
    <string name="mission_selection_header">MISSION SELECTION</string>
    <string name="destination_header">SELECT THE DESTINATION</string>

    <!-- START -->
    <string name="robot_info">Tiberius Autonomous Robot</string>
    <string name="year">~2015/2016~</string>

    <!-- AUTONOMY -->
    <string name="mission_destination">MISSION\nDESTINATION</string>
    <string name="mission_object">MISSION\nOBJECT</string>

    <!-- MANUAL -->
    <string name="left_speed">LEFT SPEED</string>
    <string name="right_speed">RIGHT SPEED</string>

    <!-- SETTINGS -->
    <string name="webcam_ip">WEBCAM IP</string>
    <string name="database_ip">DATABASE IP</string>
    <string name="control_ip">CONTROL IP</string>

    <!-- MISSION SELECTION -->
    <string name="mission_selection_gps_info">
        Set the GPS coordinates of the destination point
    </string>
    <string name="mission_selection_pic_info">
        Select the object to be detected
    </string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="mission">MISSION</string>
    <string name="status">STATUS</string>
    <string name="no_object">NO OBJECT</string>

    <!-- DATABASE -->
    <string name="GPS">GPS:</string>
    <string name="COMPASS">COMPASS:</string>
    <string name="LIDAR">LIDAR:</string>

    <!-- ********************************** BUTTON NAMES *************************************** -->
    <!-- AUTONOMY -->
    <string name="menu_btn">MENU</string>
    <string name="mission_start_btn">START</string>
    <string name="mission_stop_btn">STOP</string>
    <string name="mission_resume_btn">RESUME</string>
    <string name="mission_pause_btn">PAUSE</string>

    <!-- SETTINGS -->
    <string name="apply_btn">APPLY</string>
    <string name="cancel_btn">CANCEL</string>

    <!-- MAIN MENU -->
    <string name="menu_autonomy_btn">AUTONOMY</string>
    <string name="menu_manual_btn">Thumb Control</string>
    <string name="menu_wasd_btn">WASD Control</string>
    <string name="menu_database_btn">DATABASE</string>
    <string name="menu_settings_btn">SETTINGS</string>
    <string name="menu_credits_btn">Credits</string>
    <string name="mission_selection_map_btn">MAP</string>

</resources>
