<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_blue"
                tools:context=".MainMenuActivity">

    <!-- *************************************** HEADER *************************************** -->
    <TextView android:id="@+id/main_menu_header"
              android:layout_width="550dp"
              android:layout_height="80dp"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="10dp"
              android:text="@string/main_menu_header"
              android:textStyle="italic|bold"
              android:textSize="50sp"
              android:textColor="@android:color/white"
              android:gravity="center"/>



    <!-- *********************************** MANUAL BUTTON ********************************** -->
    <Button android:id="@+id/main_menu_manual_btn"
        android:layout_width="200dp"
        android:layout_height="30sp"
        android:layout_below="@id/main_menu_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/menu_manual_btn"
        android:textSize="20sp"
        android:onClick="goManual"/>

    <Button android:id="@+id/main_menu_wasd_btn"
        android:layout_width="200dp"
        android:layout_height="30sp"
        android:layout_below="@id/main_menu_manual_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/menu_wasd_btn"
        android:textSize="20sp"
        android:onClick="goWASDControl"/>

    <!-- *********************************** DATABASE BUTTON ********************************** -->
    <Button android:id="@+id/main_menu_database_btn"
        android:layout_width="200dp"
        android:layout_height="30sp"
        android:layout_below="@id/main_menu_wasd_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/menu_database_btn"
        android:textSize="20sp"
        android:onClick="goDatabase"/>

    <!-- *********************************** SETTINGS BUTTON ********************************** -->
    <Button android:id="@+id/main_menu_settings_btn"
        android:layout_width="200dp"
        android:layout_height="30sp"
        android:layout_below="@id/main_menu_database_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/menu_settings_btn"
        android:textSize="20sp"
        android:onClick="goSettings"/>

    <!-- *********************************** SETTINGS BUTTON ********************************** -->
    <Button android:id="@+id/main_menu_credits_btn"
        android:layout_width="200dp"
        android:layout_height="30sp"
        android:layout_below="@id/main_menu_settings_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/menu_credits_btn"
        android:textSize="20sp"
        android:onClick="goSettings"/>

</RelativeLayout>
