<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_blue"
                tools:context=".Autonomy">

    <!-- *************************************** HEADER *************************************** -->
    <TextView android:id="@+id/autonomy_header"
              android:layout_width="550dp"
              android:layout_height="80dp"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="10dp"
              android:text="@string/autonomy_header"
              android:textStyle="italic|bold"
              android:textSize="50sp"
              android:textColor="@android:color/white"
              android:gravity="center"/>

    <!-- *************************************** WEBVIEW ****************************************** -->
    <WebView android:id="@+id/webcam_autonomy"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/autonomy_header"
             android:layout_marginTop="15dp"
             android:layout_width="550dp"
             android:layout_height="380dp"></WebView>


    <!-- *************************************** MENU BUTTON *************************************** -->
    <Button android:id="@+id/menu_autonomy"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/menu_btn"
            android:background="@android:color/white"
            android:onClick="goMenu"/>

    <!-- *************************************** START BUTTON *************************************** -->
    <Button android:id="@+id/start_mission_btn"
            android:layout_width="125dp"
            android:layout_height="70dp"
            android:layout_alignTop="@id/webcam_autonomy"
            android:layout_marginLeft="45dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:background="@android:color/holo_green_light"
            android:onClick="startPressed"/>

    <!-- *************************************** STOP BUTTON *************************************** -->
    <Button android:id="@+id/stop_mission_btn"
            android:layout_width="125dp"
            android:layout_height="80dp"
            android:layout_below="@id/start_mission_btn"
            android:layout_alignLeft="@id/start_mission_btn"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/mission_stop_btn"
            android:textSize="20sp"
            android:textStyle="italic"
            android:background="@android:color/holo_red_light"
            android:onClick="stopPressed"/>

    <!-- *************************************** STATUS  ******************************************** -->
    <TextView android:id="@+id/autonomy_status"
              android:layout_width="155dp"
              android:layout_height="60dp"
              android:layout_alignBottom="@id/webcam_autonomy"
              android:layout_marginLeft="30dp"
              android:text=""
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/white"
              android:gravity="center"/>

    <TextView android:id="@+id/autonomy_status_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@id/autonomy_status"
              android:layout_alignLeft="@id/autonomy_status"
              android:layout_marginBottom="2dp"
              android:text="@string/status"
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/transparent"
              android:gravity="center"/>

    <!-- *************************************** MISSION  ******************************************** -->
    <TextView android:id="@+id/autonomy_mission"
              android:layout_width="155dp"
              android:layout_height="50dp"
              android:layout_above="@id/autonomy_status_label"
              android:layout_alignLeft="@id/autonomy_status"
              android:layout_marginBottom="15dp"
              android:text=""
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/white"
              android:gravity="center"/>

    <TextView android:id="@+id/autonomy_mission_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@id/autonomy_mission"
              android:layout_alignLeft="@id/autonomy_mission"
              android:layout_marginBottom="2dp"
              android:text="@string/mission"
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/transparent"
              android:gravity="center"/>

    <!-- ************************************ LONGITUDE ********************************************* -->
    <TextView android:id="@+id/autonomy_mission_longitude"
              android:layout_width="170dp"
              android:layout_height="40dp"
              android:layout_toEndOf="@id/webcam_autonomy"
              android:layout_alignBottom="@id/webcam_autonomy"
              android:layout_marginLeft="18dp"
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/white"
              android:gravity="center"/>

    <TextView android:id="@+id/autonomy_mission_longitude_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@id/autonomy_mission_longitude"
              android:layout_alignLeft="@id/autonomy_mission_longitude"
              android:layout_marginBottom="2dp"
              android:text="@string/longitude"
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/transparent"
              android:gravity="center"/>

    <!-- ************************************ LATITUDE ********************************************* -->
    <TextView android:id="@+id/autonomy_mission_latitude"
              android:layout_width="170dp"
              android:layout_height="40dp"
              android:layout_above="@id/autonomy_mission_longitude_label"
              android:layout_alignLeft="@id/autonomy_mission_longitude_label"
              android:layout_marginBottom="10dp"
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/white"
              android:gravity="center"/>

    <TextView android:id="@+id/autonomy_mission_latitude_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@id/autonomy_mission_latitude"
              android:layout_alignLeft="@id/autonomy_mission_latitude"
              android:layout_marginBottom="2dp"
              android:text="@string/latitude"
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/transparent"
              android:gravity="center"/>

    <!-- ************************************* MISSION DESTINATION LABEL ************************** -->
    <TextView android:id="@+id/autonomy_mission_destination_label"
              android:layout_width="220dp"
              android:layout_height="90dp"
              android:layout_above="@id/autonomy_mission_latitude_label"
              android:layout_toEndOf="@id/webcam_autonomy"
              android:layout_marginBottom="1dp"
              android:layout_marginRight="3dp"
              android:text="@string/mission_destination"
              android:textStyle="italic"
              android:textSize="30sp"
              android:textColor="@android:color/white"
              android:gravity="center"/>

    <!-- ************************************* MISSION OBJECT ************************************* -->
    <TextView android:id="@+id/autonomy_mission_object_label"
              android:layout_width="220dp"
              android:layout_height="90dp"
              android:layout_above="@id/autonomy_mission_destination_label"
              android:layout_toEndOf="@id/webcam_autonomy"
              android:layout_marginBottom="72dp"
              android:layout_marginRight="3dp"
              android:text="@string/mission_object"
              android:textStyle="italic"
              android:textSize="30sp"
              android:textColor="@android:color/white"
              android:gravity="center"/>

    <TextView android:id="@+id/autonomy_mission_object"
              android:layout_width="90dp"
              android:layout_height="70dp"
              android:layout_above="@id/autonomy_mission_destination_label"
              android:layout_toEndOf="@id/webcam_autonomy"
              android:layout_marginLeft="55dp"
              android:layout_marginBottom="8dp"
              android:textStyle="italic"
              android:textSize="20sp"
              android:background="@android:color/white"
              android:gravity="center"/>


</RelativeLayout>
